# web_server

./: .gitignore  CMakeLists.txt  README  README-exampleHTTPrequest  install_levelDB.sh  sample_server_config  server_8080_port  server_config_new
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: action_request_handler.h  config_parser.h  config_parser_old.h  create_meme_handler.h  delete_meme_request_handler.h  error_request_handler.h  health_request_handler.h  http_request.h  http_request_enums.h  http_response.h  list_meme_handler.h  list_meme_request_handler.h  malformed_request_handler.h  meme_db.h  nginx_config.h  nginx_config_tokens.h  nginx_enums.h  proxy_request_handler.h  redirect_request_handler.h  request_handler.h  request_handler_dispatcher.h  server.h  session.h  static_file_request_handler.h  status_request_handler.h  submit_meme_handler.h  view_meme_handler.h
lib/: libleveldb.so.1.20
shell_tests/: delete_integration_test.sh  expected.txt  expected_response  integration_test.sh  meme_config  meme_test.sh  test_config  test_echo_server.sh
src/: action_request_handler.cc  create_meme_handler.cc  delete_meme_request_handler.cc  error_request_handler.cc  handler_manager.cc  health_request_handler.cc  http_request.cc  http_response.cc  list_meme_handler.cc  list_meme_request_handler.cc  malformed_request_handler.cc  meme_db.cc  nginx_config.cc  proxy_request_handler.cc  redirect_request_handler.cc  request_handler_dispatcher.cc  server.cc  server_main.cc  session.cc  static_file_request_handler.cc  static_file_request_handler.h  status_request_handler.cc  submit_meme_handler.cc  view_meme_handler.cc
src/config_parser/: README  config_parser.cc  config_parser_old.cc  nginx_config.cc  nginx_config_tokens.cc
static_files/some_files/: home.html
tests/: meme_db_test.cc
tests/config_parser_tests/: brackets_unequal  config_parser_test.cc  example_config  missing_semicolon  nginx_config_tokens_test.cc  one_line  parse_root_port  server_locations
tests/dispatcher_tests/: dispatcher_test.cc
tests/http_request_object_tests/: http_request_test.cc
tests/server_tests/: mock_test.cc  server_test.cc  (+1 more)
(+14 files in other folders)
